// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar should not render if no active profile 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="sc-fzoLag gnHGCp"
  >
    <div
      class="px-4 sm:px-6 lg:px-10"
    >
      <div
        class="relative flex justify-between h-20 md:h-24"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="sc-fzoXzr cumsaa"
          >
            <svg
              width="40"
            >
              ark-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex h-20 mr-auto md:h-24"
        >
          <li
            class="flex"
          >
            <a
              class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
              href="/test"
              title="test"
            >
              test
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--notifications"
                type="button"
              >
                <div
                  class="sc-AxjAm jmgDQY p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
          <div
            class="flex items-center overflow-hidden rounded-lg"
          >
            <button
              class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
              color="primary"
              data-testid="navbar__buttons--send"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY p-1"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
          <div
            class="flex items-center overflow-hidden rounded-lg"
          >
            <button
              class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
              color="primary"
              data-testid="navbar__buttons--receive"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY p-1"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8 mr-4"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-medium text-theme-neutral"
            >
              Your balance
            </div>
            <div
              class="text-sm font-bold text-theme-neutral-dark"
            >
              <span
                data-testid="Amount"
              >
                91.43089801 BTC
              </span>
            </div>
          </div>
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="ml-4 cursor-pointer"
              data-testid="navbar__useractions"
            >
              <div
                class="sc-AxhCb iZzMIT -mr-2 border-theme-primary-contrast"
              >
                <span
                  class="text-theme-neutral-dark"
                >
                  <div
                    class="sc-AxjAm cpczEI"
                    height="1em"
                    width="1em"
                  />
                </span>
              </div>
              <div
                class="relative inline-flex items-center justify-center align-middle rounded-full"
                data-testid="navbar__user--avatar"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                >
                  <img
                    alt="Profile Avatar"
                    class="object-cover bg-center bg-no-repeat bg-cover rounded-full w-11 h-11"
                    src="avatarImage"
                  />
                </div>
                <span
                  class="sc-AxirZ cGZUNJ flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                  <span />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="sc-fzoLag gnHGCp"
  >
    <div
      class="px-4 sm:px-6 lg:px-10"
    >
      <div
        class="relative flex justify-between h-20 md:h-24"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="sc-fzoXzr cumsaa"
          >
            <svg
              width="40"
            >
              ark-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex h-20 mr-auto md:h-24"
        >
          <li
            class="flex"
          >
            <a
              class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
              title="Plugins"
            >
              Plugins
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
              title="Exchange"
            >
              Exchange
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
              title="News"
            >
              News
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--notifications"
                type="button"
              >
                <div
                  class="sc-AxjAm jmgDQY p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
          <div
            class="flex items-center overflow-hidden rounded-lg"
          >
            <button
              class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
              color="primary"
              data-testid="navbar__buttons--send"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY p-1"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
          <div
            class="flex items-center overflow-hidden rounded-lg"
          >
            <button
              class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
              color="primary"
              data-testid="navbar__buttons--receive"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY p-1"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8 mr-4"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-medium text-theme-neutral"
            >
              Your balance
            </div>
            <div
              class="text-sm font-bold text-theme-neutral-dark"
            >
              <span
                data-testid="Amount"
              >
                91.43089801 BTC
              </span>
            </div>
          </div>
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="ml-4 cursor-pointer"
              data-testid="navbar__useractions"
            >
              <div
                class="sc-AxhCb iZzMIT -mr-2 border-theme-primary-contrast"
              >
                <span
                  class="text-theme-neutral-dark"
                >
                  <div
                    class="sc-AxjAm cpczEI"
                    height="1em"
                    width="1em"
                  />
                </span>
              </div>
              <div
                class="relative inline-flex items-center justify-center align-middle rounded-full"
                data-testid="navbar__user--avatar"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                >
                  <img
                    alt="Profile Avatar"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  />
                  <span
                    class="absolute text-sm font-semibold text-theme-background"
                  >
                    JO
                  </span>
                </div>
                <span
                  class="sc-AxirZ cGZUNJ flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                  <span />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render with custom menu 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="sc-fzoLag gnHGCp"
  >
    <div
      class="px-4 sm:px-6 lg:px-10"
    >
      <div
        class="relative flex justify-between h-20 md:h-24"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="sc-fzoXzr cumsaa"
          >
            <svg
              width="40"
            >
              ark-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex h-20 mr-auto md:h-24"
        >
          <li
            class="flex"
          >
            <a
              class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
              href="/test"
              title="test"
            >
              test
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--notifications"
                type="button"
              >
                <div
                  class="sc-AxjAm jmgDQY p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
          <div
            class="flex items-center overflow-hidden rounded-lg"
          >
            <button
              class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
              color="primary"
              data-testid="navbar__buttons--send"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY p-1"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
          <div
            class="flex items-center overflow-hidden rounded-lg"
          >
            <button
              class="sc-AxiKw eWLnbL text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
              color="primary"
              data-testid="navbar__buttons--receive"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY p-1"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="h-8 border-r border-theme-neutral-200"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8 mr-4"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-medium text-theme-neutral"
            >
              Your balance
            </div>
            <div
              class="text-sm font-bold text-theme-neutral-dark"
            >
              <span
                data-testid="Amount"
              >
                91.43089801 BTC
              </span>
            </div>
          </div>
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="ml-4 cursor-pointer"
              data-testid="navbar__useractions"
            >
              <div
                class="sc-AxhCb iZzMIT -mr-2 border-theme-primary-contrast"
              >
                <span
                  class="text-theme-neutral-dark"
                >
                  <div
                    class="sc-AxjAm cpczEI"
                    height="1em"
                    width="1em"
                  />
                </span>
              </div>
              <div
                class="relative inline-flex items-center justify-center align-middle rounded-full"
                data-testid="navbar__user--avatar"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                >
                  <img
                    alt="Profile Avatar"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  />
                  <span
                    class="absolute text-sm font-semibold text-theme-background"
                  >
                    JO
                  </span>
                </div>
                <span
                  class="sc-AxirZ cGZUNJ flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                  <span />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
